# RoboticsII-Jetbot

./: .gitignore  model.ipynb  model0_0_0.onnx  model0_0_0.pth  model0_0_1.onnx  model0_0_1.pth  model1_1_0.onnx  model1_1_0.pth  model1_1_1.onnx  model1_1_1.pth  model_0.onnx  model_0.pth  model_0_1.pth  model_0_2.onnx  model_0_2.pth  model_0_4.onnx  model_0_4.pth  model_1.onnx  model_1.pth  model_1_2.onnx  model_1_2.pth  model_1_4.onnx  model_1_4.pth  pylintrc  pyproject.toml
src/: PUTDriver.py  bot_driving.py  config.yml  keyboard_driving.py  test.py  user_driving.py
