[project]
name = "roboticsii-jetbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.0",
    "inputs>=0.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "sshkeyboard>=2.3.1",
    "torch>=2.7.0",
    "torch-summary>=1.4.5",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
